--- a/src/pages/user/Register/Register.module.css
+++ b/src/pages/user/Register/Register.module.css
@@ -7,10 +7,10 @@
     }
     .parent{
     
-    background-image: url('./OIP.jpeg');
+    background-image: url('./bille.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: top;
     
     
     
