--- a/src/pages/Comment/Comment.module.css
+++ b/src/pages/Comment/Comment.module.css
@@ -7,27 +7,28 @@
     }
     .parent{
     
-    background-image: url('./comment.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    
     
     
     
     }
     
     .wraper{
-    margin-top: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: auto;
-    
-    
-    width: 420px;
-    height: 70vh;
-    border-radius: 10px;
-    padding: 30px 40px ;
+        margin-top: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: auto;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+        background: rgba(0, 0, 0, 0.7);
+        width: 420px;
+        height: 100vh;
+        border-radius: 10px;
+        padding: 30px 40px ;
+
+
+
+
     }
     .wraper h1{
     
