--- a/src/pages/user/Product/Product.module.css
+++ b/src/pages/user/Product/Product.module.css
@@ -15,6 +15,7 @@ align-items: center;
 justify-content: space-evenly;
 flex-wrap: wrap;
 
+
 }
 .child{
 flex-basis: 50%;
@@ -38,6 +39,7 @@ font-size: 26px;
 .product{
 
     padding: 50px;
+   
 }
 .changecolor{
 padding: 10px;
@@ -98,6 +100,13 @@ justify-content: center;
 flex-direction: column;
 
 
+
+
+}
+.modify_img img{
+
+
+width: 200px;
 
 
 }
