--- a/src/pages/user/Register/Register.module.css
+++ b/src/pages/user/Register/Register.module.css
@@ -6,11 +6,7 @@
     
     }
     .parent{
-    
-    background-image: url('./bille.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: top;
+
     
     
     
@@ -22,12 +18,21 @@
     align-items: center;
     justify-content: center;
     margin: auto;
-    
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
     
     width: 420px;
     height: 100vh;
     border-radius: 10px;
     padding: 30px 40px ;
+        background-image: url(./bille.jpg);
+    
+   
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top;
+
+
+
     }
     .wraper h1{
     
@@ -108,14 +113,24 @@
     width: 100%;
     height: 45px;
     background: #fff;
+    color: #000000;
     outline: none;
     border-radius: 40px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, al0.1pha);
+    box-shadow: 0 0 10px rgba(0, 0, 0,0.7);
     font-size: 16px;
     font-weight: 700;
     
     }
-    
+    .wraper button:hover{
+        background: #000000;
+        color: #fff;
+        transition: all .3s;
+
+
+
+    }
+
+
     .wraper .register_link{
     
     font-size: 14.5px;
